[project]
name = "tgcf"
version = "1.1.8"
description = "The ultimate tool to automate custom telegram message forwarding."
authors = [{name = "aahnik", email = "daw@aahnik.dev"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "requests>=2.32.0,<3.0.0",
    "typer>=0.7.0,<0.8.0",
    "python-dotenv>=0.21.0,<0.22.0",
    "pydantic>=1.10.19,<2.0.0",
    "Telethon>=1.42.0,<2.0.0",
    "cryptg>=0.5.0,<0.6.0",
    "Pillow>=10.4.0,<11.0.0",
    "hachoir>=3.3.0,<4.0.0",
    "aiohttp>=3.13.0,<4.0.0",
    "tg-login>=0.0.4,<0.1.0",
    "watermark.py>=0.0.3,<0.1.0",
    "pytesseract>=0.3.13,<0.4.0",
    "rich>=14.2.0,<15.0.0",
    "verlat>=0.1.0,<0.2.0",
    "streamlit>=1.52.0,<2.0.0",
    "PyYAML>=6.0.3,<7.0.0",
    "pymongo>=4.15.0,<5.0.0",
]

[project.urls]
Repository = "https://github.com/aahnik/tgcf"
Documentation = "https://github.com/aahnik/tgcf/wiki"

[project.scripts]
tgcf = "tgcf.cli:app"
tgcf-web = "tgcf.web_ui.run:main"

[tool.poetry]
# Poetry-specific configuration (for backward compatibility)
package-mode = true

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "isort>=5.13.0,<6.0.0",
    "pre-commit>=4.1.0,<5.0.0",
    "ipykernel>=6.29.0,<7.0.0",
    "pylint>=3.3.0,<4.0.0",
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<0.25.0",
]

[tool.poetry.group.dev.dependencies]
black = {version = "^25.1.0", allow-prereleases = true}
isort = "^5.13.0"
pre-commit = "^4.1.0"
ipykernel = "^6.29.0"
pylint = "^3.3.0"
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
