[tool.poetry]
name = "tgcf"
version = "1.1.8"
description = "The ultimate tool to automate custom telegram message forwarding."
authors = ["aahnik <daw@aahnik.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/aahnik/tgcf"
repository = "https://github.com/aahnik/tgcf"
documentation = "https://github.com/aahnik/tgcf/wiki"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.0"
typer = "^0.7.0"
python-dotenv = "^0.21.0"
pydantic = "^1.10.19"
Telethon = "^1.42.0"
cryptg = "^0.5.0"
Pillow = "^10.4.0"
hachoir = "^3.3.0"
aiohttp = "^3.13.0"
tg-login = "^0.0.4"
"watermark.py" = "^0.0.3"
pytesseract = "^0.3.13"
rich = "^14.2.0"
verlat = "^0.1.0"
streamlit = "^1.52.0"
PyYAML = "^6.0.3"
pymongo = "^4.15.0"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
black = {version = "^25.1.0", allow-prereleases = true}
isort = "^5.13.0"
pre-commit = "^4.1.0"
ipykernel = "^6.29.0"
pylint = "^3.3.0"
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"

[tool.poetry.scripts]
tgcf = "tgcf.cli:app"
tgcf-web = "tgcf.web_ui.run:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
